repaired buttons visibility

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -24,6 +24,10 @@ body {
     font-size: 16px;
 }
 
+main {
+    top: 80px;
+}
+
 /* header settings */
 header {
     padding: 20px 50px;
@@ -58,8 +62,8 @@ header {
 }
 
 /* navigation settings */
-nav {
-    display: flex;
+header nav {
+    display: inline;
     gap: 20px;
 }
 
@@ -295,3 +299,54 @@ main h2+a {
     padding: 10px 20px;
 }
 
+.button-container-portfolio {
+    align-items: center;
+    padding: 10px 20px;
+    margin: 10px;
+    top: 80px;
+}
+
+.portfolio-section-1 {
+    font: Roboto;
+    padding: 10px 20px;
+    background-color: #E5E5E5;
+    top: 80px;
+    left: 0;
+    right: 0;
+    z-index: 999;
+    position: relative;
+}
+
+.portfoliobutton1 {
+    Font family: Roboto;
+    Font-style: Medium;
+    Font-size: 16px Line;
+    height: 26px;
+    Line-height: 139%;
+    Align: Center Vertical;
+    align: Top;
+    color: #E5E5E5;
+    background-color: var(--primary-color);
+    width: 76px;
+    height: 26px;
+    border-radius: 4px;
+    border: none;
+}
+
+.portfoliobutton2 {
+    Font family: Roboto;
+    Font-style: Medium;
+    Font-size: 16px Line;
+    height: 26px;
+    Line-height: 139%;
+    Align: Center Vertical;
+    align: Top;
+    Letter-spacing: 3% ;
+    color: #212121;
+    background-color: #F5F4FA;
+    width: 76px;
+    height: 26px;
+    border-radius: 4px;
+    border: none;
+}
+}
